--- a/lab4mainpage.html
+++ b/lab4mainpage.html
@@ -20,7 +20,7 @@
         <div id = "flexing">
             <div style = "margin-right: 5px;" class="mainbox">
                 <form style = "margin-top: 10px" name = "nameForm" onsubmit="return alertThem()">
-                    <label  for = "firstName">First Name:</label>
+                    <label  for = "firstName">Name:</label>
                     <input type ="text" placeholder="Justin" id = "firstName" required>
                     <button>Alert Me</button>
                 </form>
@@ -32,9 +32,7 @@
                     return false
             }
         </script>
-
-
-
+        <!--First row change color box-->
             <div class = "mainbox">
                 <aside>
                     <p>aside</p>
@@ -42,6 +40,8 @@
 
             </div>
         </div>
+        <!--change color js-->
+        <script></script>
 
         <!-- second box row-->
         <div id = "flexing">
