--- a/lab4mainpage.html
+++ b/lab4mainpage.html
@@ -18,7 +18,7 @@
             }
         </style>
     <head>
-        <h1 id = "headAdd">uhhhhh</h1>
+        <h1 id = "headAdd">INST377 Lab 4</h1>
     </head>
     <body>
         <!-- first box row-->
@@ -61,7 +61,7 @@
         <div id = "flexing">
             <div style = "margin-right: 5px;" class="mainbox">
                 <form style = "margin-top: 10px" name = "nameForm" onsubmit="return textValidator()">
-                    <label  for = "valText">Text Tester</label>
+                    <label  for = "valText">Text Tester:</label>
                     <input type ="text" placeholder="Text to Validate" id = "valText" required>
                     <button>Validate Text</button>
                 </form>
